ffi/poc/cpp/include/ak_abi.h

/* ---- section 5: errors ---------------------------------------------------------- */
#define AK_OK                   0
#define AK_ALREADY_INITIALIZED  1
#define AK_ERR_HOST            (-1)
#define AK_ERR_MALFORMED       (-2)
#define AK_ERR_TRUNCATED       (-3)
#define AK_ERR_DEPTH           (-4)
#define AK_ERR_LIMIT           (-5)
#define AK_ERR_TRANSCODE       (-6)
#define AK_ERR_CAPACITY        (-7)
#define AK_ERR_INVALID_STATE   (-8)
#define AK_ERR_PANIC           (-9)
#define AK_ERR_UNINITIALIZED  (-10)
#define AK_ERR_ABI            (-11)
#define AK_ABI_VERSION 1u
/* ---- section 4: common vocabulary ------------------------------------------------ */

typedef int32_t (*ak_grow_fn)(void *sink, int32_t want, uint8_t **dst, int32_t *cap);
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len,
                                   uint8_t *dst, int32_t cap,
                                   ak_grow_fn grow, void *sink);
/* Encode: a string or bytes field as DATA inside the group, never a call. `len` counts
 * SOURCE code units; for a C++ host holding std::string that is bytes. `tc == NULL` means
 * the field is ABSENT, which is how a group tells absent from present-and-empty. */
struct ak_str { const void *data; size_t len; ak_transcode_fn tc; };
/* Decode: an OFFSET into the buffer the host handed in, plus a byte length. */
struct ak_span { uint32_t off, len, coder; };
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ---- the fixed exports (sections 3, 4, 5) ---------------------------------------- */
uint32_t ak_abi_version(void);
ak_enc_ctx *ak_enc_ctx_new(void);
void ak_enc_ctx_free(ak_enc_ctx *);
void ak_enc_reset(ak_enc_ctx *);
int32_t ak_enc_take(ak_enc_ctx *, const uint8_t **ptr, size_t *len);
int32_t ak_enc_err(const ak_enc_ctx *);
ak_dec_ctx *ak_dec_ctx_new(void);
void ak_dec_ctx_free(ak_dec_ctx *);
void ak_fail(void *ctx, int32_t code, const uint8_t *msg, uint32_t msg_len);
ak_transcode_fn ak_tc_utf8(void);
ak_transcode_fn ak_tc_utf8_trusted(void);
ak_transcode_fn ak_tc_bytes(void);
/* README R5: counted in the CORE, so a call the optimiser removed is not counted. */
struct AkCounters {
  uint64_t forward, reverse, transcode, prefix_moves, prefix_bytes, grows;
};
void ak_enc_counters(const ak_enc_ctx *, struct AkCounters *out);
void ak_enc_counters_reset(ak_enc_ctx *);
void ak_dec_counters(const ak_dec_ctx *, struct AkCounters *out);
void ak_dec_counters_reset(ak_dec_ctx *);
size_t ak_enc_site_moves(const ak_enc_ctx *, uint32_t *out, size_t cap);
/* The boundary priced on its own, in the same process and build as the arms. */
uint64_t ak_noop(uint64_t x);
uint64_t ak_noop_reverse(uint64_t (*f)(uint64_t), uint64_t x);